# python3-cyberfusion-powerdns-secondary-cleaner

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  renovate.json  setup.cfg  setup.py
.run/: Template Python tests.run.xml
debian/: changelog  control  copyright  python3-cyberfusion-powerdns-secondary-cleaner.pydist  rules
powerdns_secondary_cleaner/: CLI.py  powerdns_api.py
requirements/: base.txt  dev.txt  test.txt
src/cyberfusion/PowerDNSSecondaryCleaner/: CLI.py  __init__.py  powerdns_api.py
tests/: conftest.py
tests/feature_tests/: test_cli.py
tests/unit_tests/: test_powerdns_api.py
